k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: datacore
  labels:
    name: datacore
